--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: fwdmsa
-Version: 0.1
-Date: 2010-04-19
+Version: 0.2
+Date: 2011-07-26
 Title: Forward search for Mokken scale analysis
 Author: Wobbe P. Zijlstra <w.p.zijlstra@uvt.nl>
 Maintainer: Wobbe P. Zijlstra <w.p.zijlstra@uvt.nl>
@@ -9,7 +9,7 @@ Description: fwdmsa performs the Forward Search for Mokken scale
         analysis. It detects outliers, it produces several types of
         diagnostic plots.
 License: GPL (>= 2)
-URL: http://spitswww.uvt.nl/~pzijlstr/
-Packaged: 2010-07-08 11:07:08 UTC; Pzijlstr
+URL: http://www.tilburguniversity.edu/webwijs/show/?uid=w.p.zijlstra
+Packaged: 2011-07-27 07:06:30 UTC; Pzijlstr
 Repository: CRAN
-Date/Publication: 2010-07-08 18:31:22
+Date/Publication: 2011-07-27 09:05:24
